add link to header btn

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,8 +60,8 @@
                 <h1>I am a <span class="typejs"> </span> </h1>
             </div>
             <div class="header-text-btn">
-                <button class="btn"><a href="#" class="btn-link">Latest Projects </a> </button>
-                <button class="btn"><a href="#" class="btn-link">More About Me </a> </button>
+                <button class="btn"><a href="#project" class="btn-link">Latest Projects </a> </button>
+                <button class="btn"><a href="#about" class="btn-link">More About Me </a> </button>
             </div>
         </div>
     </header>
