--- a/views/index.ejs
+++ b/views/index.ejs
@@ -121,7 +121,7 @@
             </div>
             <div class="row gy-3">
                 <div class="col-md-12 col-12 col-lg-6 col-xxl-6">
-                    <a href="https://avo-cado.herokuapp.com/"><img src="./img/realestate.jpg" alt="image is loading"
+                    <a href="https://avocado.abunaim.xyz"><img src="./img/logo1.png" alt="image is loading"
                             class="img-fluid"> </a>
 
                 </div>
@@ -134,7 +134,7 @@
                         Express, MySql... </p>
                     <span class="github-link"><a href="https://github.com/01789959113/avocado.io">Github link
                         </a></span>
-                    <span class="site-link"><a href="https://avo-cado.herokuapp.com/">Site link </a></span>
+                    <span class="site-link"><a href="https://avocado.abunaim.xyz">Site link </a></span>
                 </div>
                 <div class="col-md-12 col-12 col-lg-6 col-xxl-6 py-5">
                     <h1 class="potluck-heading">Potluck </h1>
@@ -149,7 +149,7 @@
                     <span class="site-link"><a href="#">Site link </a></span>
                 </div>
                 <div class="col-md-12 col-12 col-lg-6 col-xxl-6 py-5">
-                    <a href="#"> <img src="./img/restaurant.jpg" alt="image is loading" class="img-fluid"> </a>
+                    <a href="#"> <img src="./img/logo2.png" alt="image is loading" class="img-fluid"> </a>
                 </div>
             </div>
         </div>
