--- a/views/index.ejs
+++ b/views/index.ejs
@@ -144,9 +144,9 @@
                     </p>
                     <p class="project-text">This website build using Html, CSS, Bootstrap, JavaScript, jQuery, Node.js,
                         Express, MySql...</p>
-                    <span class="github-link"><a href="#">Github link
+                    <span class="github-link"><a href="https://github.com/01789959113/potluck.io" target="_sakib">Github link
                         </a></span>
-                    <span class="site-link"><a href="#">Site link </a></span>
+                    <span class="site-link"><a href="https://potluck.abunaim.xyz" target="_sakib">Site link </a></span>
                 </div>
                 <div class="col-md-12 col-12 col-lg-6 col-xxl-6 py-5">
                     <a href="#"> <img src="./img/logo2.png" alt="image is loading" class="img-fluid"> </a>
